# synapse

./: README.md  pyproject.toml
examples/: alphabet_cnn.py  digits_cnn.py
src/synapse/layers/: __init__.py  fully_connected_layer.py  layers_abstract.py
src/synapse/layers/utils/: activations.py  initializations.py
src/synapse/models/: neural_network.py
src/synapse/models/utils/: loss.py
src/synapse/utils/: __init__.py  kaggle_imports.py  test_helpers.py
